--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
   
@@ -192,7 +191,7 @@
 	<div class = "board">
 	  	<div class = "content">
 	  		<p class="name">AIESEC HY </p>
-			<iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2FAIESECHY1112&amp;width=292&amp;height=62&amp;colorscheme=dark&amp;show_faces=false&amp;stream=false&amp;header=false&amp;appId=363475683733747" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:292px; height:75px; background-color:#4C4C4C; opacity:0.85" allowtransparency="true"; ></iframe> 
+<iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2FAIESECHY&amp;width&amp;height=62&amp;colorscheme=light&amp;show_faces=false&amp;header=true&amp;stream=false&amp;show_border=true&amp;appId=439291652785738" frameborder="0" style="border:none; overflow:hidden; width:292px; height:75px; background-color:#4C4C4C; opacity:0.85" allowtransparency="true";></iframe>
 			<!-- allowTransparency="true" -->
 	  		<p>
 	  			<span class="kind">noun</span>
